# DeepMetaHandles

./: README.md  environment.yml
data_preprocessing/: CMakeLists.txt  calc_weight.cpp  sample_key_points.cpp  sample_surface_points.cpp
data_preprocessing/merge_data/: merge_key_point_50.py  merge_mesh.py  merge_pc_4096.py  merge_weight.py
src/: datasets.py  demo_meta_handle.py  demo_target_driven_deform.py  laplacian.py  losses.py  network.py  pointnet_utils.py  render.py  train.py  utils.py
